# formal-web

./: .gitignore  AGENTS.md  Cargo.toml  FormalWeb.lean  FormalWebRuntime.lean  LICENSE  LICENSE-MIT  LICENSE_BSD  Main.lean  README.md  build.rs  lake-manifest.json  lakefile.lean  lakefile.toml  mach  package.json  run-bundle.sh  sync-hf-sessions.sh  tls_design.md
automation/: Cargo.toml  README.md
automation/src/: cdp.rs  lib.rs  webdriver.rs
content/: AGENTS.md  Cargo.toml  README.md  build.rs
content/codegen/: Cargo.toml  README.md  interfaces.toml
content/codegen/src/: emit.rs  inheritance.rs  main.rs  parse.rs
content/src/: fetch.rs  generic_js_test.rs  html.rs  lib.rs  main.rs
content/src/boa/: README.md  downcast.rs  event_handler.rs  execution_context.rs  html_parser.rs  mod.rs  platform_objects.rs  runtime_data.rs  task_queue.rs
content/src/boa/bindings/: Document.webidl  Element.webidl  Event.webidl  EventTarget.webidl  Node.webidl  UIEvent.webidl  Window.webidl  abort_controller.rs  abort_signal.rs  console.rs  css.rs  document.rs  document_generated.rs  dom_exception.rs  element.rs  element_generated.rs  event.rs  event_generated.rs  event_target.rs  eventtarget_generated.rs  html_anchor_element.rs  html_element.rs  hyperlink_element_utils.rs  mod.rs  node.rs  node_generated.rs  ui_event.rs  uievent_generated.rs  window.rs  window_generated.rs
content/src/boa/bindings/dom/: abort_controller.rs  abort_signal.rs  document.rs  dom_exception.rs  element.rs  event.rs  mod.rs  (+3 more)
content/src/css/: mod.rs
content/src/dom/: README.md  abort.rs  dispatch.rs  document.rs  dom_exception.rs  element.rs  event.rs  global_scope.rs  mod.rs  node.rs  ui_event_dispatch.rs  window.rs
content/src/html/: README.md  dispatch.rs  environment_settings_object.rs  events.rs  fetch.rs  global_scope.rs  html_anchor_element.rs  html_dom_tree.rs  html_element.rs  html_iframe_element.rs  html_input_element.rs  html_media_element.rs  html_parser.rs  html_video_element.rs  hyperlink_element_utils.rs  location.rs  microtask.rs  safe_passing_of_structured_data.rs  ui_events.rs  window.rs  window_or_worker_global_scope.rs  windowproxy.rs
content/src/html/iframe/: element.rs  mod.rs
content/src/infra/: mod.rs
content/src/js/: README.md  build_context.rs  builtin_fn.rs  console_generic.rs  css_generic.rs  downcast.rs  downcast_generic.rs  engine.rs  mod.rs  platform_objects.rs  testutils.rs
content/src/js/bindings/: README.md  console.rs  css.rs  mod.rs
content/src/streams/: README.md  context_host.rs  mod.rs  readable.rs  readablebytestreamcontroller.rs  readablestream.rs  readablestreamasynciterator.rs  readablestreambyobreader.rs  readablestreamdefaultcontroller.rs  readablestreamdefaultreader.rs  readablestreamsupport.rs  strategy.rs  transformstream.rs  writablestream.rs  writablestreamdefaultcontroller.rs  writablestreamdefaultwriter.rs  writablestreamsupport.rs
content/src/streams/readable/: default_controller.rs  default_reader.rs  stream.rs
content/src/testutils/: mod.rs
content/src/wasm/: README.md  conversions.rs  functions.rs  mod.rs  namespace.rs  thread.rs  types.rs  wasm_state.rs  worker.rs
content/src/webidl/: README.md  array_index.rs  async_iterable.rs  buffer_source.rs  callback.rs  dictionary.rs  mod.rs  promise.rs
content/src/webidl/binding/: attribute.rs  constant.rs  interface.rs  mod.rs  operation.rs  registry.rs
content/src/webidl/bindings/: attribute.rs  constant.rs  interface.rs  mod.rs  operation.rs  registry.rs
content_process/: Cargo.toml
content_process/src/: main.rs
crates/anyrender_vello/: Cargo.toml
crates/anyrender_vello_hybrid/: Cargo.toml
crates/anyrender_vello_hybrid/src/: scene.rs  webgl_scene.rs
embedder/: Cargo.toml  README.md
embedder/src/: chrome.rs  content_bridge.rs  event_loop.rs  headless.rs  lib.rs  main.rs  ui_event.rs  windowed.rs  winit.rs  winit_integration.rs
embedder/src/event_loop/: headless.rs  mod.rs  winit.rs
embedder/src/event_loop/windowed/: chrome.rs  mod.rs
embedder/src/windowed/: mod.rs
examples/player/: Cargo.toml
examples/player/src/: main.rs
ffi/: Cargo.toml  build.rs
ffi/src/: content_bridge.rs  lean_shim.c  lib.rs  macos_compat.m
graphics/: Cargo.toml  README.md
graphics/src/: compositor.rs  iosurface_surface.rs  lib.rs  renderer.rs
graphics/src/backend/: avfoundation.rs  gstreamer.rs  mod.rs
ipc/: ARCHITECTURE.md  Cargo.toml
ipc/src/: backend.rs  error.rs  lib.rs  serialize.rs  types.rs
ipc/src/backend/: ipc_channel.rs  native.rs  xpc.rs
ipc/xpc-services/: README.md  formal-web.content.plist  formal-web.media.plist  formal-web.net.plist
ipc/xpc-sys/: Cargo.toml  build.rs
ipc/xpc-sys/src/: apple.rs  lib.rs  xpc_wrapper.c  xpc_wrapper.h
js_engine/: Cargo.toml  README.md  build.rs
js_engine/src/: boa.rs  engine.rs  enums.rs  gc.rs  jsc_sys.rs  lib.rs  records.rs  types.rs
js_engine/src/boa/: engine.rs  job_executor.rs  mod.rs  types.rs
js_engine/src/jsc/: engine.rs  mod.rs  sys.rs  types.rs
js_engine/src/v8/: engine.rs  mod.rs  types.rs
js_engine_macros/: Cargo.toml
js_engine_macros/src/: lib.rs
media/: Cargo.toml  README.md  build.rs
media/src/: lib.rs  main.rs  managed_pipeline.rs
media/src/backend/: mod.rs
media/src/backend/avfoundation/: mod.rs  pipeline.rs
media/src/backend/gstreamer/: mod.rs  pipeline.rs
net/: Cargo.toml  README.md
net/src/: lib.rs  main.rs
tests/wpt_runner/: Cargo.toml  README.md
tests/wpt_runner/src/: lib.rs  main.rs
user_agent/: Cargo.toml  README.md
user_agent/src/: event_loop.rs  fetch.rs  id.rs  ipc_manifest.rs  media.rs  timer.rs  ui_event.rs  user_agent.rs
verification/: Cargo.toml  README.md  run-cdp-startup-feature-check.sh  verify-navigation.sh  verify-rendering.sh  verify_script.sh
verification/src/: lib.rs  monitor.rs  session.rs  tracer.rs  types.rs  validate.rs
verification/tla_specs/: MessagePortExtraFG.cfg  MessagePortExtraFG.tla  Navigation.cfg  Navigation.tla  NavigationTrace.cfg  NavigationTrace.tla
webview/: Cargo.toml  README.md
webview/src/: compositor.rs  lib.rs
(+219 files in other folders)
