[package]
name = "formal-web"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "formal-web"

[[bin]]
name = "formal-web"
path = "src/main.rs"

[features]
default = ["media", "boa"]
media = ["dep:media"]

# Backend selection.
# These propagate to the content crate via workspace dependency resolution.
jsc = ["dep:content", "content/jsc"]
boa = ["dep:content", "content/boa", "content/media"]
wasm = ["content/wasm"]

[dependencies]
automation = { path = "automation" }
clap = { version = "4.5", features = ["derive"] }
content = { path = "content", optional = true, default-features = false }
embedder = { path = "embedder" }
media = { path = "media", optional = true }
net = { path = "net" }
wpt_runner = { path = "tests/wpt_runner" }
verification = { path = "verification" }
log = "0.4"
env_logger = "0.11"

[workspace]
resolver = "2"
members = [
    ".",
    "automation",
    "content",
    "ipc",
    "ipc/xpc-sys",
    "embedder",
    "ipc_messages",
    "js_engine",
    "js_engine_macros",
    "media",
    "net",
    "user_agent",
    "verification",
    "webview",
]
default-members = [
    ".",
    "embedder",
    "content",
    "net",
    "media",
]

[workspace.dependencies]
# Blitz crates (git dep from gterzian/blitz fork)
blitz-traits = { git = "https://github.com/gterzian/blitz", rev = "954b41f25e4fbfae39d7c512016d8193ee53ee80", default-features = false }
blitz-dom = { git = "https://github.com/gterzian/blitz", rev = "954b41f25e4fbfae39d7c512016d8193ee53ee80", default-features = false }
blitz-paint = { git = "https://github.com/gterzian/blitz", rev = "954b41f25e4fbfae39d7c512016d8193ee53ee80", default-features = false }
blitz-html = { git = "https://github.com/gterzian/blitz", rev = "954b41f25e4fbfae39d7c512016d8193ee53ee80", default-features = false }


