[package]
name = "automation"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ipc_messages = { path = "../ipc_messages" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }

[lib]
path = "src/lib.rs"