[package]
name = "content"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false

[features]
default = ["media"]
media = []
extension-bin = []

[lib]
path = "src/main.rs"

[[bin]]
name = "formal-web-content"
path = "src/bin/content_process.rs"
required-features = ["extension-bin"]

[dependencies]
arboard = { version = "3.6.1", default-features = false }
anyrender = { version = "0.10", features = ["serde"] }
boa_engine = { git = "https://github.com/boa-dev/boa", rev = "7ce9cae84ac9bf54fe528bb05b997ac24af808a4", default-features = false }
boa_gc = { git = "https://github.com/boa-dev/boa", rev = "7ce9cae84ac9bf54fe528bb05b997ac24af808a4", features = ["thin-vec", "boa_string"] }
blitz-dom = { workspace = true, features = ["svg", "system_fonts"] }
blitz-paint = { workspace = true, features = ["svg"] }
blitz-traits = { workspace = true }
cssparser = "0.37"
ipc_messages = { path = "../ipc_messages" }
data-url = "0.3"
html5ever = "0.39.0"
ipc = { path = "../crates/ipc" }
keyboard-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
style = { version = "0.17.0", package = "stylo" }
style_traits = { version = "0.17.0", package = "stylo_traits" }
url = "2"
verification = { path = "../verification" }
wasmtime = "45.0.2"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
xml5ever = "0.39.0"


