[package]
name = "content"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(boa_backend)', 'cfg(jsc_backend)'] }

[features]
default = ["media"]
media = []

[lib]
path = "src/main.rs"

[[bin]]
name = "formal-web-content"
path = "src/bin/content_process.rs"

[dependencies]
arboard = { version = "3.6.1", default-features = false }
anyrender = { version = "0.10", features = ["serde"] }
blitz-dom = { workspace = true, features = ["svg", "system_fonts"] }
blitz-paint = { workspace = true, features = ["svg"] }
blitz-traits = { workspace = true }
cssparser = "0.37"
data-url = "0.3"
html5ever = "0.39.0"
ipc = { path = "../ipc" }
ipc_messages = { path = "../ipc_messages" }
keyboard-types = "0.7"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
style = { version = "0.17.0", package = "stylo" }
style_traits = { version = "0.17.0", package = "stylo_traits" }
crossbeam-channel = "0.5"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
xml5ever = "0.39.0"
verification = { path = "../verification" }

# ── Boa backend (Linux, Windows, other non-Apple platforms) ──────────────
[target.'cfg(not(any(target_os = "macos", target_os = "ios", target_os = "tvos")))'.dependencies]
js_engine = { path = "../js_engine", features = ["boa"] }
boa_engine = { git = "https://github.com/boa-dev/boa", rev = "7ce9cae84ac9bf54fe528bb05b997ac24af808a4", default-features = false }
boa_gc = { git = "https://github.com/boa-dev/boa", rev = "7ce9cae84ac9bf54fe528bb05b997ac24af808a4", features = ["thin-vec", "boa_string"] }
wasmtime = "45.0.2"

# ── JSC backend (macOS, iOS, tvOS) ──────────────────────────────────────
[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "tvos"))'.dependencies]
js_engine = { path = "../js_engine", default-features = false, features = ["jsc"] }
