[package]
name = "formalweb-content-process"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyrender = { version = "0.8", features = ["serde"] }
blitz-dom = { path = "../ffi/vendor/blitz/packages/blitz-dom", default-features = false, features = ["svg"] }
blitz-html = { path = "../ffi/vendor/blitz/packages/blitz-html", default-features = false }
blitz-paint = { path = "../ffi/vendor/blitz/packages/blitz-paint", default-features = false, features = ["svg"] }
blitz-traits = { path = "../ffi/vendor/blitz/packages/blitz-traits", default-features = false }
content-process-protocol = { package = "formalweb-content-process-protocol", path = "../content_process_protocol" }
data-url = "0.3"
ipc-channel = "0.21"
keyboard-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
