[package]
name = "embedder"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyrender = { version = "0.10", features = ["serde"] }
anyrender_vello = "0.10.1"
anyrender_vello_cpu = "0.12.1"
automation = { path = "../automation" }
arboard = { version = "3.6.1", default-features = false }
blitz-dom = { path = "../vendor/blitz/packages/blitz-dom", default-features = false, features = ["system_fonts", "svg"] }
blitz-html = { path = "../vendor/blitz/packages/blitz-html", default-features = false }
blitz-paint = { path = "../vendor/blitz/packages/blitz-paint", default-features = false, features = ["svg"] }
blitz-traits = { path = "../vendor/blitz/packages/blitz-traits", default-features = false }
cursor-icon = "1"
html5ever = "0.37"
ipc-channel = "0.21"
ipc_messages = { path = "../ipc_messages" }
keyboard-types = "0.7"
kurbo = "0.13"
peniko = "0.6"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winit = "0.30"
webview = { path = "../webview" }