[package]
name = "ffi"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
blitz-traits = { path = "../vendor/blitz/packages/blitz-traits", default-features = false }
embedder = { path = "../embedder" }
ipc-channel = "0.21"
ipc_messages = { path = "../ipc_messages" }

[build-dependencies]
cc = "1.2"