[package]
name = "ffi"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
blitz-traits = { path = "../vendor/blitz/packages/blitz-traits", default-features = false }
data-url = "0.3"
embedder = { path = "../embedder" }
ipc-channel = "0.21"
ipc_messages = { path = "../ipc_messages" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1"
webview = { path = "../webview" }

[build-dependencies]
cc = "1.2"