[package]
name = "graphics"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false

[features]
default = []
ipc-channel-backend = ["ipc/ipc-channel-backend"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "formal-web-graphics"
path = "src/bin/graphics_process.rs"

[dependencies]
anyrender = { version = "0.10", features = ["serde"] }
ipc = { path = "../ipc" }
ipc_messages = { path = "../ipc_messages" }
media = { path = "../media" }
kurbo = "0.13"
peniko = "0.6"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
