[package]
name = "js_engine_macros"
version = "0.1.0"
edition = "2024"
publish = false
description = "Proc-macro attributes for js_engine GC integration."

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(boa_backend)', 'cfg(jsc_backend)'] }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
