[package]
name = "media"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false

[features]
default = ["ipc-channel-backend"]
ipc-channel-backend = ["ipc/ipc-channel-backend"]

[lib]
path = "src/main.rs"

[[bin]]
name = "formal-web-media"
path = "src/bin/media_process.rs"

[dependencies]
gstreamer = { version = "0.23", features = ["v1_22"] }
gstreamer-app = "0.23"
ipc = { path = "../ipc" }
ipc_messages = { path = "../ipc_messages" }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
url = "2"
crossbeam-channel = "0.5"
