[package]
name = "net"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false

[features]
default = []
ipc-channel-backend = ["ipc/ipc-channel-backend"]

[lib]
path = "src/main.rs"

[[bin]]
name = "formal-web-net"
path = "src/bin/net_process.rs"

[dependencies]
ipc = { path = "../ipc" }
ipc_messages = { path = "../ipc_messages" }
mime_guess = "2"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"
url = "2"
verification = { path = "../verification" }
