[package]
name = "user_agent"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
blitz-traits = { path = "../vendor/blitz/packages/blitz-traits", default-features = false }
crossbeam-channel = "0.5"
ipc-channel = "0.21"
ipc_messages = { path = "../ipc_messages" }
serde_json = "1"
psl = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
log = "0.4"
verification = { path = "../verification" }
[lib]
path = "src/user_agent.rs"
