[package]
name = "user_agent"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["media", "ipc-channel-backend"]
media = []
ipc-channel-backend = ["ipc/ipc-channel-backend"]

[dependencies]
blitz-traits = { workspace = true }
crossbeam-channel = "0.5"
ipc_messages = { path = "../ipc_messages" }
ipc = { path = "../ipc" }
serde_json = "1"
psl = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
log = "0.4"
verification = { path = "../verification" }
[lib]
path = "src/user_agent.rs"
