[package]
name = "user_agent"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["media"]
media = []
ipc-channel-backend = ["ipc/ipc-channel-backend"]

[dependencies]
blitz-traits = { workspace = true }
crossbeam-channel = "0.5"
ipc_messages = { path = "../ipc_messages" }
ipc = { path = "../ipc" }
psl = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
log = "0.4"
verification = { path = "../verification" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyboard-types = "0.7"

[lib]
path = "src/user_agent.rs"
