[package]
name = "verification"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "tla-validate"
path = "src/bin/tla_validate.rs"

[[bin]]
name = "webdriver-screenshot-check"
path = "src/bin/webdriver_screenshot_check.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ipc-channel = "0.21"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1"