[package]
name = "webview"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyrender = { version = "0.8", features = ["serde"] }
blitz-traits = { path = "../vendor/blitz/packages/blitz-traits", default-features = false }
ipc_messages = { path = "../ipc_messages" }
keyboard-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
