[package]
name = "wpt_runner"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "formal-web-wpt"
path = "src/main.rs"